add in the ability to do transit dates

--- a/timelord.html
+++ b/timelord.html
@@ -251,21 +251,7 @@
 		<div id="datewrapper">
 		<!--Enter Transit Date (<a href="http://www.timeanddate.com/worldclock/converter.html">UTC time</a>)-->
 			<form id="transitdateinput">
-				<!--<label for = "transitmonthfield">Month</label>-->
-				<select id = "transitmonthfield"></select>
-				<!--<label for = "transitdayfield">Day</label>-->
-				<select id = "transitdayfield"></select>
-				<!--<label for = "transityearfield">Year</label>-->
-				<select id = "transityearfield"></select><!--<br>-->
-				<!--<label for = "transithourfield">Hour</label>-->
-				<select id = "transithourfield"></select>
-				<!--<label for = "transitminutefield">Minute</label>-->
-				<select id = "transitminutefield"></select>
-				<!--<label for = "transitsecondfield">Second</label>-->
-				<select id = "transitsecondfield"></select><!--<br>-->
 
-
-				<br>
 				Enter Birth Time in <a href="http://www.timeanddate.com/worldclock/converter.html">UTC/GMT</a><br>
 				<label for = "natalmonthfield">Month</label>
 				<select id = "natalmonthfield">
@@ -305,8 +291,24 @@
 					<label for="chartsect">Sect?</label><br>
 					<select id = "chartsect"></select>
 				</div>
+                <br>
+
+      Transit Date (Defaults to current time in UTC)<br>
+				<label for = "transitmonthfield">Month</label>
+				<select id = "transitmonthfield"></select>
+				<label for = "transitdayfield">Day</label>
+				<select id = "transitdayfield"></select>
+				<label for = "transityearfield">Year</label>
+				<select id = "transityearfield"></select><br>
+<!--				<label for = "transithourfield">Hour</label>-->
+				<select id = "transithourfield"></select>
+<!--				<label for = "transitminutefield">Minute</label>-->
+				<select id = "transitminutefield"></select>
+<!--				<label for = "transitsecondfield">Second</label>-->
+				<select id = "transitsecondfield"></select><br>
 
 
+      
 				<div id="latlong">
 					<!--<input id="search" type="button" value="Look up GPS of City" />-->
 					<!--<p><label for="Latitude">Latitude</label>-->
