--- a/timelord.html
+++ b/timelord.html
@@ -64,11 +64,13 @@
 						float: right;
 
 				}
-/*
-				#container, #latlong, #chartcanvas, #transitcanvas, #natalcanvas, #cityinput, #transitingaspects {
+				#chartcanvas, #transitcanvas, #natalcanvas, #transitingaspects {
 						display: none;
 				}
-*/
+				# zodicalreleasingL3data {
+						position: relative; 
+						float: right;
+				}
 				#latlong, #cityinput {
 						display: none;
 				}
@@ -228,18 +230,15 @@
 				}
 			};
 		</script>
-<!--
 		<script>
 			$(document).ready(function() {
 				$('#zodicalreleasingdata').click(function (e) {
-		    var clickedX = e.pageX - this.offsetLeft;
-		    var clickedY = e.pageY - this.offsetTop;
-		    alert(clickedX + ' ' + clickedY);
-		
-		    });
+			    // var clickedX = e.pageX - this.offsetLeft;
+			    var clickedY = e.pageY - this.offsetTop;
+			    $e.displayL3FromClick(clickedY);
+			  });
 		  });
 		</script>
--->
 
 
 </head>
@@ -252,7 +251,13 @@
 			<div id="transitingaspects">
 				<canvas id="aspectcanvas" width = "460" height = "310" ></canvas>
 				</div>
+			<div id="zodicalreleasingL3data">
+					<canvas id="zodicalreleasingL3" width = "460" height = "2505" ></canvas>
+			</div>		
+
+
 		</div>
+
 
 
 		<div id="zodicalreleasingdata">
