adding in preliminary L3 & L4

--- a/timelord.html
+++ b/timelord.html
@@ -235,9 +235,10 @@
 				$('#zodicalreleasingdata').click(function (e) {
 			    // var clickedX = e.pageX - this.offsetLeft;
 			    var clickedY = e.pageY - this.offsetTop;
-			    $e.displayL3FromClick(clickedY);
+			    $e.displayL3FromClick(clickedY, false);
 			  });
 		  });
+
 		</script>
 
 
@@ -252,7 +253,7 @@
 				<canvas id="aspectcanvas" width = "460" height = "310" ></canvas>
 				</div>
 			<div id="zodicalreleasingL3data">
-					<canvas id="zodicalreleasingL3" width = "460" height = "2505" ></canvas>
+					<canvas id="zodicalreleasingL3" width = "460" height = "3000" ></canvas>
 			</div>		
 
 
