Another button names change

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 		</div>
 		<p>
 		<div id="calculateHere">
-			<input type='button' value='Chart of the Moment - Only Natal in URL' onclick='$e.calculatedTimeRedirect("current")'>
+			<input type='button' value='Chart of the Moment - Store Natal Data in URL' onclick='$e.calculatedTimeRedirect("current")'>
 		</div>
 		<div id="resetButtons">
 			<input type='button' value='Store Transit Biwheel Data in URL' onclick='$e.calculatedTimeRedirect("calculate")'>
